Closed Bug 381217 Opened 18 years ago Closed 18 years ago

places exported bookmarks.html missing classic "This is an automatically generated file" HTML comment

Categories

(Firefox :: Bookmarks & History, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: moco, Assigned: jminta)

Details

Attachments

(1 file)

places exported bookmarks.html missing classic "This is an automatically generated file" HTML comment usually, we have: <!DOCTYPE NETSCAPE-Bookmark-file-1> <!-- This is an automatically generated file. It will be read and overwritten. DO NOT EDIT! --> Not sure who out there depends on that, but someone might, assuming there wasn't a good reason to remove it.
Attached patch patchSplinter Review
Adds the comment to the html file.
Assignee: nobody → jminta
Status: NEW → ASSIGNED
Attachment #265385 - Flags: review?(mano)
Comment on attachment 265385 [details] [diff] [review] patch r=mano.
Attachment #265385 - Flags: review?(mano) → review+
Checking in browser/components/places/src/nsPlacesImportExportService.cpp; /cvsroot/mozilla/browser/components/places/src/nsPlacesImportExportService.cpp,v <-- nsPlacesImportExportService.cpp new revision: 1.17; previous revision: 1.16 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: