Bug 381217 places exported bookmarks.html missing classic 'This is an automatically generated file' HTML comment, r=mano